[tool.poetry]
name = "issuing-tools"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
stripe = "^2.55.1"
webhooks = "^0.4.2"
flask = "^1.1.2"
yikai-tools = "^1.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
